# test_pymodbus

./: README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  sim_setting.json
src/: decoder.py  modbus_rtu_client.py  serial_config.py  simple_client.py  test_decoder.py  test_exceptions.py  test_modbus_wrapper.py  test_modbus_wrapper_CO_DI.py  test_modbus_wrapper_HR_IR.py
src/mytesting/: test_modbus_wrapper_CO_DI.py  test_modbus_wrapper_HR_IR.py
