[tool.poetry]
name = "pymodbus-test-library"
version = "0.1.0"
description = "A wrapper class around PyModbus lib"
authors = ["Ehsan Peymani <ehsan-p@innova.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymodbus = "^3.7.4"
pydantic = "^2.9.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
